fix: add strength to horizontal scroll

--- a/src/shared/Tasks/List/List.module.sass
+++ b/src/shared/Tasks/List/List.module.sass
@@ -6,7 +6,7 @@
   overflow-x: auto
   display: flex
   white-space: nowrap
-  scroll-behavior: smooth
+  //scroll-behavior: smooth
   //justify-content: space-around
   //justify-content:
   gap: 24px
